2014-1-16 <TJ>
   Moved minimization functions to OnePassMinimization, changed KMeansMinimization class to simply call OnePassMinimization a specified number of times
   Added extra tau function in TauComponents for users to get tau directly
   Changed radius parameter in AxesFinderFromExclusiveJet subclasses to use max_allowable_R
   Updated example.ref to account for changes due to change in radius parameter
2014-1-15 <TJ>
   Changed NjettinessComponents to TauComponents
   Updated MeasureFunction with "result" function that returns TauComponents object
   TauComponents changed to calculate all tau components given subtaus_numerator and tau_denominator
   Njettiness updated to return TauComponents object rather than individual components
   Nsubjettiness and NjettinessPlugin updated to have option for 4th parameter
2014-1-14 <TJ>
   Added NjettinessComponents class so Njettiness does not recalculate tau values
   Removed old Njettiness constructors, updated Nsubjettiness and NjettinessPlugin constructors to use new constructor
   Added geometric minimization to OnePassAxesFinders
   Created new Njettiness function to set OnePassAxesFinders to reduce code
   Updated LightLikeAxis with ConvertToPseudoJet function
   Updated README with new functionality of code
2014-1-12 <TJ>
   Removed NsubGeometricParameters in all functions/constructors, replaced with Rcutoff double
   Added three new measure mode options where Rcutoff is declared explicitly in parameters
   Added checks so minimization axes finders are not used for geometric measures
   AxesFinderFromOnePassMinimization class created as child of AxesFinderFromKmeansMinimization
   Added new NsubjettinessRatio constructor to include MeasureMode option
   Moved AxesFinder and MeasureFunction declarations from AxesMode and MeasureMode into separate Njettiness function
   Removed R0 from AxesFinderFromKmeansMinimization
   Changed example.cc to get rid of use of NsubGeometricParameters
2014-1-9 <TJ>